--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -80,7 +80,7 @@ label{
     border-radius: 10px;
     color: white;
     align-items: center;
-    margin: 14% auto 5%;
+    margin: 13.5% auto 5%;
     justify-content: center;
     width: 60%;
     gap: .5rem;
@@ -101,7 +101,7 @@ label{
     border-radius: 10px;
     color: white;
     align-items: center;
-    margin: 14% auto 5%;
+    margin: 13.5% auto 5%;
     justify-content: center;
     width: 100%;
     gap: .5rem;
@@ -158,6 +158,44 @@ label{
         color: none;
         border: none;
         width: 50%;
+    }
+    .formsignup{
+        gap: 1rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2%;
+    }
+    
+}
+
+@media screen and (max-width:1050px){
+    
+    .title{
+        font-size: 100%;
+        font-weight: 700;
+    }
+    .btn1{
+        background: transparent;
+        color: var(--primaryColor);
+        transition: .3s ease;
+    }
+    
+    .btn1:hover{
+        background: transparent;
+        color: black;
+    }
+    .formDiv{
+        flex-basis: 40%;
+        margin: auto;
+        flex-direction: column;
+        gap: 1rem;
+        transform: translateY(-1rem);
+    }
+    input{
+        background: white;
+        color: none;
+        border: none;
+        width: 30%;
     }
     .formsignup{
         gap: 1rem;
