--- a/src/App.css
+++ b/src/App.css
@@ -351,7 +351,7 @@ button:hover {
 .adminclientnav{
   background-color:#d1d0a9;
   border-radius: 5pt;
-  height: 35pt;
+  height: 65pt;
   display: flex;
   align-items: center;
   font-size: 8pt;
@@ -365,6 +365,8 @@ button:hover {
   display: inline-block;
   margin-left: 10pt;
   margin-right: 10pt;
+  margin-top: 10pt;
+  margin-bottom: 10pt;
 }
 .adminclientnav ul li a{
   color: #2c2626;/*color del trexto*/
