--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,8 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: 350pt;
   width: 250px;
   margin: 20px;
   padding: 20px;
@@ -104,6 +106,53 @@ code {
 
 .boton-comprar:hover {
   background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .productos-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+  .tarjeta {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 360px;
+    height: auto;
+    margin: 20px;
+    padding: 15px;
+    padding-right: 5px;
+    padding-left: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .imagen-producto {
+    width: 110px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-right: 20px;
+  }
+  .informacion {
+    text-align:left;
+    padding-right: 1%;
+  }
+  .informacion p {
+    font-size: 1rem;
+    padding-bottom: 0%;
+    margin-bottom: 0px;
+  }
+  .informacion .precio {
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding-top: 1%;
+    padding-bottom: 3%;
+  }
+
+
 }
 
 
